# diploma

./: LICENSE  README.md  analize.ipynb  capm.py  desktop.ini  getting_data.py  grahps.py  moex.ipynb  obr_data.py  portfel.py  predobr.py  pyproject.toml  utils.py
data/: MOEX.csv  capm_data.csv  main_stok_dataset.csv  portfels.csv
data/stock_data/: ABRD.csv  ACKO.csv  AFKS.csv  AKRN.csv  ALRS.csv  APTK.csv  AQUA.csv  ASSB.csv  ASTR.csv  BANEP.csv  BLNG.csv  BRZL.csv  BSPBP.csv  CARM.csv  CHGZ.csv  CHMF.csv  DIAS.csv  DSKY.csv  DVEC.csv  EELT.csv  ELFV.csv  FEES.csv  FESH.csv  FLOT.csv  GAZAP.csv  GAZS.csv  GMKN.csv  HIMCP.csv  HYDR.csv  IGSTP.csv  INGR.csv  IVAT.csv  JNOS.csv  KAZT.csv  KLSB.csv  KLVZ.csv  KMAZ.csv  KOGK.csv  KRKN.csv  KRKOP.csv  (+63 more)
data/stoks_data/: ABIO.csv  AFLT.csv  AMEZ.csv  APRI.csv  ARSA.csv  AVAN.csv  BANE.csv  BELU.csv  BISVP.csv  BSPB.csv  CBOM.csv  CHKZ.csv  CHMK.csv  CNTL.csv  CNTLP.csv  DATA.csv  DELI.csv  DIOD.csv  DZRD.csv  DZRDP.csv  ELMT.csv  ENPG.csv  EUTR.csv  GAZA.csv  GAZC.csv  GAZP.csv  GAZT.csv  GCHE.csv  GECO.csv  GEMA.csv  GEMC.csv  GTRK.csv  HEAD.csv  HNFG.csv  IGST.csv  IRAO.csv  IRKT.csv  JNOSP.csv  KAZTP.csv  KBSB.csv  (+110 more)
